# kaspa-personal-sign-example

golang/: go.mod  go.sum
golang/cmd/address_to_pubkey/: address.go
golang/cmd/main/: main.go
golang/cmd/pubkey_to_address/: address.go
golang/cmd/sign/: sign.go
golang/cmd/verify/: verify.go
golang/utils/: utils.go
rust/: Cargo.toml
rust/src/: main.rs
