[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v1.0.1" }
secp256k1 = { version = "0.29.1", features = ["global-context"]}
